--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sereda-app": {
+    "mintuatze-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,14 +13,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/sereda-app",
+            "outputPath": "dist/mintuatze-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ],
             "styles": [
               "src/styles.css"
@@ -37,31 +38,32 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "serviceWorker": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "sereda-app:build"
+            "browserTarget": "mintuatze-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "sereda-app:build:production"
+              "browserTarget": "mintuatze-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "sereda-app:build"
+            "browserTarget": "mintuatze-app:build"
           }
         },
         "test": {
@@ -77,7 +79,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ]
           }
         },
@@ -95,7 +98,7 @@
         }
       }
     },
-    "sereda-app-e2e": {
+    "mintuatze-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +106,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "sereda-app:serve"
+            "devServerTarget": "mintuatze-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "sereda-app:serve:production"
+              "devServerTarget": "mintuatze-app:serve:production"
             }
           }
         },
@@ -123,5 +126,5 @@
       }
     }
   },
-  "defaultProject": "sereda-app"
+  "defaultProject": "mintuatze-app"
 }
